tests/compile_fail/_02_empty_auto_from_args.stderr
error: at least one `from` struct must be specified
  --> tests/compile_fail/_02_empty_auto_from_args.rs:24:1
   |
24 | #[auto_from()]
   | ^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `auto_from` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0412]: cannot find type `Model2a` in this scope
  --> tests/compile_fail/_02_empty_auto_from_args.rs:54:8
   |
15 | struct Model1a {
   | -------------- similarly named struct `Model1a` defined here
...
54 |     m: Model2a,
   |        ^^^^^^^ help: a struct with a similar name exists: `Model1a`

error[E0412]: cannot find type `Model2a` in this scope
  --> tests/compile_fail/_02_empty_auto_from_args.rs:35:22
   |
15 | struct Model1a {
   | -------------- similarly named struct `Model1a` defined here
...
35 | #[auto_from(Model1a, Model2a)]
   |                      ^^^^^^^ help: a struct with a similar name exists: `Model1a`

error[E0422]: cannot find struct, variant or union type `Model2a` in this scope
  --> tests/compile_fail/_02_empty_auto_from_args.rs:82:23
   |
15 | struct Model1a {
   | -------------- similarly named struct `Model1a` defined here
...
82 |         let model2a = Model2a {
   |                       ^^^^^^^ help: a struct with a similar name exists: `Model1a`
